# Nadzorowany-projekt

./: .env.example  .gitignore  config.yaml  data_and_encoder.ipynb  notebook.ipynb  pyproject.toml  requirements.txt
data/: prober.py
models/: autoencoder.pth
src/: main.py
src/callbacks/: __init__.py  reconstruction_logger.py
src/data/: __init__.py  module.py
src/models/: autoencoder.py
src/utils/: __init__.py  config.py  visualize.py
